# outreach

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
data/: README.md  sample_nces.csv  sample_rankings.csv
docs/: RESEND_MARKETING_SETUP.md  SUPABASE.md
scripts/: docker-entrypoint.sh  run_import_500.ps1  run_nj50n_live.ps1  run_nj50n_prep.ps1  run_ny50h_live.ps1  run_ny50h_prep.ps1  run_oh50r_live.ps1  run_oh50r_prep.ps1  run_tx50s_live.ps1  run_tx50s_prep.ps1
src/cpb_outreach/: __init__.py  cli.py  config.py  db.py  email_render.py  sender.py  suppressions.py  unsubscribe_tokens.py
src/cpb_outreach/api/: main.py
src/cpb_outreach/enrich/: import_supabase.py  merge_nces.py  scrape_contacts.py  verify_email.py
src/cpb_outreach/worker/: run_send.py
supabase/: config.toml
supabase/migrations/: 20260516000000_initial_schema.sql
supabase/seed/: 20260516000001_pilot_campaign.sql  20260516000002_pilot_go_live.sql  20260517000003_pilot_subject_variant_c.sql
templates/: pilot_50.html
tests/: test_api_health.py  test_merge_filters.py  test_merge_nces.py  test_unsubscribe_tokens.py  test_verify_email.py
